--- a/requirements.txt
+++ b/requirements.txt
@@ -20,5 +20,5 @@ urllib3==1.26.3
 webencodings==0.5.1
 whitenoise==5.2.0
 xhtml2pdf==0.2.5
-heroku- 0.10.0
+django-heroku==0.3.1
 python-dateutil-1.5
