--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,22 @@ arabic-reshaper==2.1.1
 asgiref==3.3.1
 certifi==2020.12.5
 chardet==4.0.0
+dj-database-url==0.5.0
 Django==3.1.5
+django-heroku==0.3.1
 future==0.18.2
 gunicorn==20.0.4
+heroku==0.1.4
 html5lib==1.1
 idna==2.10
 Pillow==8.1.0
+psycopg2==2.8.6
 PyPDF2==1.26.0
 python-bidi==0.4.2
+python-dateutil==1.5
 pytz==2020.5
 razorpay==1.2.0
-reportlab==3.2.0
+reportlab==3.5.60
 requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
@@ -20,5 +25,3 @@ urllib3==1.26.3
 webencodings==0.5.1
 whitenoise==5.2.0
 xhtml2pdf==0.2.5
-django-heroku==0.3.1
-python-dateutil-1.5
